--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/utilties/utilities.mjs" type="module"></script>
     <script src="/js/auth/login.js" type="module"></script>
   </head>
 </html>
@@ -191,5 +192,11 @@
         <p class="text-center mt-1">Vintage$Brokers 2023</p>
       </div>
     </footer>
+    <button
+    class="btn btn-lg btn-primary rounded-circle position-fixed bottom-0 end-0 translate-middle d-none"
+    id="back-to-up"
+  >
+    <i class="fa fa-arrow-up" aria-hidden="true"></i>
+  </button>
 </body>
 </html>
