--- a/profile/index.html
+++ b/profile/index.html
@@ -17,6 +17,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/utilties/utilities.mjs" type="module"></script>
   </head>
 </html>
 <body>
