--- a/profile/index.html
+++ b/profile/index.html
@@ -18,6 +18,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utilties/utilities.mjs" type="module"></script>
+    <script src="/js/api/auth/logout.js" type="module "></script>
   </head>
 </html>
 <body>
@@ -56,7 +57,7 @@
             <a class="nav-link text-secondary" href="/feed/listings.html">Auctions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary" href="/index.html">Logout</a>
+            <a id="logoutButton" class="nav-link text-secondary" href="/index.html">Logout</a>
           </li>
         </ul>
       </div>
@@ -71,7 +72,7 @@
           </button>
           
     </div>
-    <div class="col-md-9 d-none d-md-block">
+    <div class=" bannerImage col-md-9 d-none d-md-block">
         <img src="/images/profilebanner.jpg" alt="Profile Banner">
     </div>
     
