--- a/profile/index.html
+++ b/profile/index.html
@@ -19,6 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utilties/utilities.mjs" type="module"></script>
    <script src="/js/api/auth/logout.js" type="module"></script>
+   <script src="/js/api/profile/profileInfo.js" type="module"></script>
   </head>
 </html>
 <body>
@@ -65,17 +66,22 @@
   </header>
   <main>
     <h1 class="visually-hidden">Profile</h1>
-    <div class="profileBox container row mx-auto">
-    <div class="col-sm-12 col-md-3 bg-success">
-        <button type="button" class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#editModal">
-            Open Edit Modal
-          </button>
-          
-    </div>
-    <div class=" bannerImage col-md-9 d-none d-md-block">
-        <img src="/images/profilebanner.jpg" alt="Profile Banner">
-    </div>
-    
+    <div class="container mt-2 mx-auto">
+      <div class="row">
+        <div class="col-md-4 profileBox">
+          <div class="d-flex justify-content-center align-items-center text-info p-5" id="loaderContainer">
+            <div class="spinner-border" role="status">
+            </div>
+          </div>
+          <button type="button" class="btn btn-primary visually-hidden " data-bs-toggle="modal" data-bs-target="#editModal">
+              Open Edit Modal
+            </button>      
+        </div>
+      <div class="col-md-6  d-none d-md-block">
+        <div class=" bannerImage">
+          <img src="/images/profilebanner.jpg" alt="Profile Banner" style="">
+        </div>
+      </div>
     </div>
   </main>
 </body>
