--- a/profile/index.html
+++ b/profile/index.html
@@ -69,9 +69,8 @@
     <div class="container mt-2 mx-auto">
       <div class="row">
         <div class="col-md-4 profileBox">
-          <div class="d-flex justify-content-center align-items-center text-info p-5" id="loaderContainer">
-            <div class="spinner-border" role="status">
-            </div>
+          <div class="d-flex justify-content-center align-items-center text-info p-5 visually-hidden" id="loaderContainer">
+            <div class="spinner-border" role="status"></div>
           </div>
           <button type="button" class="btn btn-primary visually-hidden " data-bs-toggle="modal" data-bs-target="#editModal">
               Open Edit Modal
