--- a/profile/index.html
+++ b/profile/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utilties/utilities.mjs" type="module"></script>
    <script src="/js/api/auth/logout.js" type="module"></script>
-   <script src="/js/api/profile/profileInfo.js" type="module"></script>
+   <script src="/js/api/profile/profileInfo.mjs" type="module"></script>
   </head>
 </html>
 <body>
@@ -68,7 +68,7 @@
     <h1 class="visually-hidden">Profile</h1>
     <div class="container mt-2 mx-auto">
       <div class="row">
-        <div class="col-md-4 profileBox">
+        <div class="col-md-5 profileBox">
           <div class="d-flex justify-content-center align-items-center text-info p-5 visually-hidden" id="loaderContainer">
             <div class="spinner-border" role="status"></div>
           </div>
@@ -76,7 +76,7 @@
               Open Edit Modal
             </button>      
         </div>
-      <div class="col-md-6  d-none d-md-block">
+      <div class="col-md-4  d-none d-md-block">
         <div class=" bannerImage">
           <img src="/images/profilebanner.jpg" alt="Profile Banner" style="">
         </div>
