--- a/profile/index.html
+++ b/profile/index.html
@@ -78,7 +78,7 @@
         </div>
       <div class="col-md-4  d-none d-md-block">
         <div class=" bannerImage">
-          <img src="/images/profilebanner.jpg" alt="Profile Banner" style="">
+          <img src="/images/profilebanner.jpg" alt="Profile Banner">
         </div>
       </div>
     </div>
