--- a/profile/index.html
+++ b/profile/index.html
@@ -27,6 +27,7 @@
     <div class="container bg-primary">
       <a
         href="/profile/index.html"
+        id="redirectLink"
         class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
         ><img
           src="/images/Vintagebrokers.logo.jpg"
@@ -68,7 +69,8 @@
     <h1 class="visually-hidden">Profile</h1>
     <div class="container mt-2 mx-auto">
       <div class="row">
-        <div class="col-md-5 profileBox">
+        <div class="col-md-5">
+          <div class="profileBox">
           <div class="d-flex justify-content-center align-items-center text-info p-5 visually-hidden" id="loaderContainer">
             <div class="spinner-border" role="status"></div>
           </div>
@@ -76,11 +78,10 @@
               Open Edit Modal
             </button>      
         </div>
-      <div class="col-md-4  d-none d-md-block">
-        <div class=" bannerImage">
-          <img src="/images/profilebanner.jpg" alt="Profile Banner">
-        </div>
       </div>
+      <div class="col-md-6 d-none d-md-block">
+        <div class="bannerImage"></div>
+        </div>
     </div>
   </main>
 </body>
