--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utilities/utilities.mjs" type="module"></script>
-    <script src="/js/api/auth/login.js" type="module"></script>
+    <script src="/js/api/auth/login.mjs" type="module"></script>
   </head>
 </html>
 <body>
