--- a/profile/index.html
+++ b/profile/index.html
@@ -83,25 +83,26 @@
         <div class="bannerImage"></div>
         </div>
         <div class="container fs-3 mt-3">
-        <ul class="nav mb-3 gap-1 " id="pills-tab" role="tablist">
-          <li class="nav-item " role="presentation">
-            <button class="nav-link tab-link active" id="pills-auction-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Auctions</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link tab-link" id="pills-bids-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Bids</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link tab-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Won</button>
-          </li>
-        </ul>
-        <div class="tab-content" id="pills-tabContent">
-          <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-auction-tab" tabindex="0">
-            <div class="profileAuctions"></div>
+          <ul class="nav mb-3 gap-1 " id="auction-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button class="nav-link tab-link active" id="auction-tab" data-bs-toggle="pill" data-bs-target="#pills-auction" type="button" role="tab" aria-controls="pills-auction" aria-selected="true">Auctions</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link tab-link" id="bids-tab" data-bs-toggle="pill" data-bs-target="#pills-bids" type="button" role="tab" aria-controls="pills-bids" aria-selected="false">Bids</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link tab-link" id="won-tab" data-bs-toggle="pill" data-bs-target="#pills-won" type="button" role="tab" aria-controls="pills-won" aria-selected="false">Won</button>
+            </li>
+          </ul>
+          <div class="tab-content" id="pills-tabContent">
+            <div class="tab-pane fade show active" id="pills-auction" role="tabpanel" aria-labelledby="auction-tab" tabindex="0">
+              <div class="profileAuctions"></div>
+            </div>
+            <div class="tab-pane fade" id="pills-bids" role="tabpanel" aria-labelledby="bids-tab" tabindex="0">...</div>
+            <div class="tab-pane fade" id="pills-won" role="tabpanel" aria-labelledby="won-tab" tabindex="0">...</div>
           </div>
-          <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-bids-tab" tabindex="0">...</div>
-          <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">...</div>
         </div>
-      </div>
+        
       <div class="modal fade bg-dark bg-opacity-50  modal-fullscreen-sm-down" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content border border-3 border-secondary bg-info text-white">
