--- a/profile/index.html
+++ b/profile/index.html
@@ -68,27 +68,23 @@
   <main>
     <h1 class="visually-hidden">Profile</h1>
     <div class="container mt-2 mx-auto">
-      <div class="row">
-        <div class="col-md-5">
-          <div class="profileBox">
+      <div class="row justify-content-evenly">
+          <div class=" profileBox">
           <div class="d-flex justify-content-center align-items-center text-info p-5 visually-hidden" id="loaderContainer">
             <div class="spinner-border" role="status"></div>
           </div>
           <button type="button" class="btn btn-primary visually-hidden " data-bs-toggle="modal" data-bs-target="#editModal">
-              Open Edit Modal
-            </button>      
-        </div>
-      </div>
-      <div class="col-md-6 d-none d-md-block">
-        <div class="bannerImage"></div>
-        </div>
-        <div class="container fs-3 mt-3">
-          <ul class="nav mb-3 gap-1 " id="auction-tab" role="tablist">
+          Open Edit Modal
+          </button>      
+          </div>
+      </div>  
+        <div class="container fs-4">
+          <ul class="nav mb-3 gap-1 border-secondary border border-2 border-top-0 rounded-bottom justify-content-evenly" id="auction-tab" role="tablist">
             <li class="nav-item" role="presentation">
               <button class="nav-link tab-link active" id="auction-tab" data-bs-toggle="pill" data-bs-target="#pills-auction" type="button" role="tab" aria-controls="pills-auction" aria-selected="true">Auctions</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link tab-link" id="bids-tab" data-bs-toggle="pill" data-bs-target="#pills-bids" type="button" role="tab" aria-controls="pills-bids" aria-selected="false">Bids</button>
+              <button class="nav-link tab-link " id="bids-tab" data-bs-toggle="pill" data-bs-target="#pills-bids" type="button" role="tab" aria-controls="pills-bids" aria-selected="false">Bids</button>
             </li>
             <li class="nav-item" role="presentation">
               <button class="nav-link tab-link" id="won-tab" data-bs-toggle="pill" data-bs-target="#pills-won" type="button" role="tab" aria-controls="pills-won" aria-selected="false">Won</button>
@@ -102,7 +98,6 @@
             <div class="tab-pane fade" id="pills-won" role="tabpanel" aria-labelledby="won-tab" tabindex="0">...</div>
           </div>
         </div>
-        
       <div class="modal fade bg-dark bg-opacity-50  modal-fullscreen-sm-down" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content border border-3 border-secondary bg-info text-white">
