--- a/profile/index.html
+++ b/profile/index.html
@@ -18,7 +18,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utilities/utilities.mjs" type="module"></script>
-   <script src="/js/api/auth/logout.js" type="module"></script>
+   <script src="/js/api/auth/logout.mjs" type="module"></script>
    <script src="/js/api/profile/profileInfo.mjs" type="module"></script>
   </head>
 </html>
@@ -68,7 +68,7 @@
   <main>
     <h1 class="visually-hidden">Profile</h1>
     <div class="container mt-2 mx-auto">
-      <div class="row justify-content-evenly">
+      <div class=" d-block justify-content-evenly">
           <div class=" profileBox">
           <div class="d-flex justify-content-center align-items-center text-info p-5 visually-hidden" id="loaderContainer">
             <div class="spinner-border" role="status"></div>
@@ -78,7 +78,7 @@
           </button>      
           </div>
       </div>  
-        <div class="container fs-4">
+        <div class="container fs-4 ">
           <ul class="nav mb-3 gap-1 border-secondary border border-2 border-top-0 rounded-bottom justify-content-evenly" id="auction-tab" role="tablist">
             <li class="nav-item" role="presentation">
               <button class="nav-link tab-link active" id="auction-tab" data-bs-toggle="pill" data-bs-target="#pills-auction" type="button" role="tab" aria-controls="pills-auction" aria-selected="true">Auctions</button>
@@ -92,9 +92,11 @@
           </ul>
           <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-auction" role="tabpanel" aria-labelledby="auction-tab" tabindex="0">
-              <div class="profileAuctions"></div>
+              <div class="profileAuctions d-flex flex-wrap "></div>
             </div>
-            <div class="tab-pane fade" id="pills-bids" role="tabpanel" aria-labelledby="bids-tab" tabindex="0">...</div>
+            <div class="tab-pane fade" id="pills-bids" role="tabpanel" aria-labelledby="bids-tab" tabindex="0">
+              <div class="profileBids d-flex flex-wrap"></div>
+            </div>
             <div class="tab-pane fade" id="pills-won" role="tabpanel" aria-labelledby="won-tab" tabindex="0">...</div>
           </div>
         </div>
