--- a/profile/index.html
+++ b/profile/index.html
@@ -20,7 +20,7 @@
     <script src="/js/utilities/utilities.mjs" type="module"></script>
    <script src="/js/api/auth/logout.mjs" type="module"></script>
    <script src="/js/api/profile/profileInfo.mjs" type="module"></script>
-   <script src="/js/auctions/createAuction.mjs" type="module"></script>
+   <script src="/js/auctions/createAuction.mjs" type="module" defer></script>
   </head>
 <body>
   <header class="navbar navbar-expand-lg sticky-top">
@@ -195,23 +195,22 @@
                       <label for="auctionMedia" class="form-label text-start">Image URL:</label>
                       <div id="imageFieldsContainer">
                         <div class="auctionMedia">
-                            <input
-                                type="text"
-                                class="form-control"
-                                id="auctionMedia"
-                                name="media"
-                                placeholder="Add Image"
-                                required
-                            />
+                          <input
+                            type="text"
+                            class="form-control"
+                            name="media"
+                            placeholder="Add Image"
+                            required
+                          />
                         </div>
                       </div>
                       <button
-                      type="button"
-                      id="addImageButton"
-                      class="btn btn-secondary mt-2"
-                  >
-                      Add Image
-                  </button>
+                        type="button"
+                        id="addImageButton"
+                        class="btn btn-secondary mt-2"
+                      >
+                        Add Image
+                      </button>
                       <div class="modal-footer justify-content-around mt-2">
                           <button
                               type="submit"
