--- a/profile/index.html
+++ b/profile/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link text-secondary" href="/feed/index.html">Auctions</a>
           </li>
           <li class="nav-item">
-            <a id="logoutButton" class="nav-link text-secondary" href="index.html">Logout</a>
+            <a id="logoutButton" class="nav-link text-secondary" href="/index.html">Logout</a>
           </li>
         </ul>
       </div>
