--- a/feed/auctionSpecific.html
+++ b/feed/auctionSpecific.html
@@ -18,7 +18,10 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utilities/utilities.mjs" type="module"></script>
-    <script src="/js/auth/logout.mjs" type="module"></script>
+    <script src="/js/auth/logout.mjs" type="module" defer></script>
+    <script src="/js/auctions/createAuction.mjs" type="module" defer></script>
+    <script src="/js/feed/fetchLoggedInUser.mjs" type="module" defer></script>
+    <script src="/js/feed/fetchSingleAuction.mjs" type="module" defer></script>
   </head>
 </html>
 <body>
@@ -65,136 +68,143 @@
         </div>
       </header>
       <main>
-        <div class="container loggedInBox">
+        <div class="container loggedInBox  text-center p-3 bg-success bg-opacity-25 fs-3 text-danger border border-secondary border">
+          You need to log in to bid on auctions!
+          <div class="d-flex justify-content-center align-items-center text-info p-5 visually-hidden" id="loaderContainer">
+            <div class="spinner-border" role="status"></div>
+          </div>
         </div>
+        <div class="masthead-auction">
         <div class="auctionBox">
-
         </div>
-      </main> 
-      <div class="modal fade modal-lg bg-dark bg-opacity-50" id="createAuctionModal" tabindex="-1" aria-labelledby="createAuctionModal" aria-hidden="true">
-        <div class="modal-dialog ">
-            <div class="modal-content border border-3 border-secondary bg-info text-white">
-              <div class="modal-header" id="createAuctionModal-header">
-                    <h4 class="modal-title">Create New Auction</h4>
-                    <button type="button" class="btn-close" id="createAuctionModal-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="createNewAuctionForm">
-                        <label for="auctionTitle" class="form-label text-start">Title</label>
-                        <div class="auctionTitle">
-                            <input
-                                type="text"
-                                class="form-control"
-                                id="auctionTitle"
-                                name="title"
-                                placeholder="Change Title"
-                                required
-                            />
-                        </div>
-                        <label for="auctionBody" class="form-label text-start mt-2">Body:</label>
-                        <textarea
-                            class="form-control mt-1 mb-3"
-                            placeholder="Add description"
-                            id="auctionBody"
-                            type="text"
-                            name="body"
-                            required
-                            rows="3"
-                        ></textarea>
-                        <label for="auctionEndsAt" class=" form-label text-start mt-2">Ends At:</label>
-                        <div class="auctionEndsAt">
-                            <input
-                                type="datetime-local"
-                                class="form-control"
-                                id="auctionEndsAt"
-                                name="endsAt"
-                                required
-                            />
-                        </div>
-                        <label for="auctionTags" class="form-label text-start mt-2">Tags</label>
-                        <div class="auctionTags">
-                            <input
-                                type="text"
-                                class="form-control"
-                                id="auctionTags"
-                                name="tags"
-                                placeholder="Add Tags, use comma between tags"
-                            />
-                        </div>
-                        <label for="auctionMedia" class="form-label text-start mt-2">Image URL:</label>
-                        <div id="mediaGallery">
-                          <div class="auctionMedia">
-                            <input
-                              type="text"
-                              class="form-control"
-                              name="media"
-                              placeholder="Add Image"
-                              required
-                            />
+        <div class="modal fade modal-lg bg-dark bg-opacity-50" id="createAuctionModal" tabindex="-1" aria-labelledby="createAuctionModal" aria-hidden="true">
+          <div class="modal-dialog ">
+              <div class="modal-content border border-3 border-secondary bg-info text-white">
+                <div class="modal-header" id="createAuctionModal-header">
+                      <h4 class="modal-title">Create New Auction</h4>
+                      <button type="button" class="btn-close" id="createAuctionModal-btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                      <form id="createNewAuctionForm">
+                          <label for="auctionTitle" class="form-label text-start">Title</label>
+                          <div class="auctionTitle">
+                              <input
+                                  type="text"
+                                  class="form-control"
+                                  id="auctionTitle"
+                                  name="title"
+                                  placeholder="Change Title"
+                                  required
+                              />
                           </div>
-                        </div>
-                        <button
-                          type="button"
-                          class=" addImageButton btn btn-secondary mt-2"
-                        >
-                        <i class="fa-solid fa-plus"></i>
-                        </button>
-                        <button
-                          type="button"
-                          class=" removeImageButton btn btn-secondary mt-2"
-                        >
-                        <i class="fa-solid fa-minus"></i>
-                        </button>
-                        <div class="modal-footer justify-content-around mt-2">
-                            <button
-                                type="submit"
-                                id="createAuctionButton"
-                                class=" mainButton btn btn-secondary border border-primary btn-lg mt-2 ml-auto"
-                            >
-                                Create Auction
-                            </button>
+                          <label for="auctionBody" class="form-label text-start mt-2">Body:</label>
+                          <textarea
+                              class="form-control mt-1 mb-3"
+                              placeholder="Add description"
+                              id="auctionBody"
+                              type="text"
+                              name="body"
+                              required
+                              rows="3"
+                          ></textarea>
+                          <label for="auctionEndsAt" class=" form-label text-start mt-2">Ends At:</label>
+                          <div class="auctionEndsAt">
+                              <input
+                                  type="datetime-local"
+                                  class="form-control"
+                                  id="auctionEndsAt"
+                                  name="endsAt"
+                                  required
+                              />
+                          </div>
+                          <label for="auctionTags" class="form-label text-start mt-2">Tags</label>
+                          <div class="auctionTags">
+                              <input
+                                  type="text"
+                                  class="form-control"
+                                  id="auctionTags"
+                                  name="tags"
+                                  placeholder="Add Tags, use comma between tags"
+                              />
+                          </div>
+                          <label for="auctionMedia" class="form-label text-start mt-2">Image URL:</label>
+                          <div id="mediaGallery">
+                            <div class="auctionMedia">
+                              <input
+                                type="text"
+                                class="form-control"
+                                name="media"
+                                placeholder="Add Image"
+                                required
+                              />
+                            </div>
+                          </div>
+                          <button
+                            type="button"
+                            class=" addImageButton btn btn-secondary mt-2"
+                          >
+                          <i class="fa-solid fa-plus"></i>
                           </button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>  
-    <footer class="container-fluid bg-success bg-opacity-25 mt-1">
-        <div class="row align-items-center">
-          <div class="col-md-6">
-            <nav class="navbar navbar-expand-lg">
-              <div class="container-fluid justify-content-evenly fs-5 p-3">
-                <ul class="navbar-nav fs-2">
-                  <li class="nav-item mx-5">
-                    <a class="nav-link" href="/register.html">Register</a>
-                  </li>
-                  <li class="nav-item mx-5">
-                    <a class="nav-link" href="/about.html">About Us</a>
-                  </li>
-                  <li class="nav-item mx-5">
-                    <a class="nav-link" href="/contact.html">Contact</a>
-                  </li>
-                </ul>
+                          <button
+                            type="button"
+                            class=" removeImageButton btn btn-secondary mt-2"
+                          >
+                          <i class="fa-solid fa-minus"></i>
+                          </button>
+                          <div class="modal-footer justify-content-around mt-2">
+                              <button
+                                  type="submit"
+                                  id="createAuctionButton"
+                                  class=" mainButton btn btn-secondary border border-primary btn-lg mt-2 ml-auto"
+                              >
+                                  Create Auction
+                              </button>
+                            </button>
+                      </form>
+                  </div>
               </div>
-            </nav>
           </div>
-          <div class="col-md-6">
-            <p class="fs-2 text-center">Get Social With US</p>
-            <div class="d-flex flex-row justify-content-center gap-5">
-              <i class="fa-brands fa-facebook fs-1 text-info"></i>
-              <i class="fa-brands fa-square-instagram text-danger fs-1"></i>
-              <i class="fa-brands fa-twitter fs-1 text-info"></i>
-              <i class="fa-brands fa-linkedin fs-1 text-dark"></i>
+      </div> 
+    </div>
+      </main>  
+    <footer class="container-fluid bg-success bg-opacity-25 mt-1">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid justify-content-evenly fs-5 p-3">
+              <ul class="navbar-nav fs-2">
+                <li class="nav-item mx-5">
+                  <a class="nav-link" href="/register.html">Register</a>
+                </li>
+                <li class="nav-item mx-5">
+                  <a class="nav-link" href="/about.html">About Us</a>
+                </li>
+                <li class="nav-item mx-5">
+                  <a class="nav-link" href="/contact.html">Contact</a>
+                </li>
+              </ul>
             </div>
-          </div>
-          <p class="text-center mt-1">Vintage$Brokers 2023</p>
+          </nav>
         </div>
-      </footer>
-      <button
-      class="btn btn-lg btn-primary rounded-circle position-fixed bottom-0 end-0 translate-middle d-none"
-      id="back-to-up"
-    >
-      <i class="fa fa-arrow-up" aria-hidden="true"></i>
-    </button>
-    </body>
-    </html>
+        <div class="col-md-6">
+          <p class="fs-2 text-center">Get Social With US</p>
+          <div class="d-flex flex-row flex-wrap justify-content-center gap-5">
+            <i class="fa-brands fa-facebook fs-1 text-info"></i>
+            <i class="fa-brands fa-square-instagram text-danger fs-1"></i>
+            <i class="fa-brands fa-twitter fs-1 text-info"></i>
+            <i class="fa-brands fa-linkedin fs-1 text-dark"></i>
+          </div>
+        </div>
+        <p class="text-center mt-1">Vintage$Brokers 2023</p>
+      </div>
+    </footer>
+    <button
+    class="btn btn-lg btn-primary rounded-circle position-fixed bottom-0 end-0 translate-middle d-none"
+    id="back-to-up"
+  >
+    <i class="fa fa-arrow-up" aria-hidden="true"></i>
+  </button>
+  </body>
+  </html>
+
+ 
