--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -101,7 +101,6 @@
         </div>
         <div class="allAuctions d-flex flex-wrap justify-content-evenly">
         </div>
-        
             <div class="d-flex justify-content-center align-items-center text-info p-5 visually-hidden" id="loaderContainer">
               <div class="spinner-border" role="status"></div>
             </div>
@@ -196,7 +195,6 @@
             </div>
         </div>  
       </main>
-    </body>
     <footer class="container-fluid bg-success bg-opacity-25 mt-1">
         <div class="row align-items-center">
           <div class="col-md-6">
@@ -216,9 +214,9 @@
               </div>
             </nav>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 ">
             <p class="fs-2 text-center">Get Social With US</p>
-            <div class="d-flex flex-row justify-content-center gap-5">
+            <div class="d-flex flex-row flex-wrap justify-content-center gap-5">
               <i class="fa-brands fa-facebook fs-1 text-info"></i>
               <i class="fa-brands fa-square-instagram text-danger fs-1"></i>
               <i class="fa-brands fa-twitter fs-1 text-info"></i>
