--- a/profile/index.html
+++ b/profile/index.html
@@ -159,15 +159,16 @@
                               required
                           />
                       </div>
-                      <label for="auctionBody" class="form-label text-start mt-2">Body:</label>
+                      <label for="auctionBody" class="form-label text-start mt-2">Description:</label>
                       <textarea
                           class="form-control mt-1 mb-3"
                           placeholder="Add description"
                           id="auctionBody"
                           type="text"
                           name="body"
+                          maxlength="200"
                           required
-                          rows="3"
+                          rows="10"
                       ></textarea>
                       <label for="auctionEndsAt" class=" form-label text-start mt-2">Ends At:</label>
                       <div class="auctionEndsAt">
